fix css (scrollbar)

--- a/docs/assets/css/mystyle.css
+++ b/docs/assets/css/mystyle.css
@@ -93,9 +93,7 @@ pre, pre.highlight {
 	padding: 10px;
 	margin: 0 0 15px 0;
 	border-radius: 5px;
-	overflow: auto;
-	white-space: pre-wrap;
-	word-wrap: break-word;
+	overflow-x: auto;
 }
 code {
 	background-color: #f7f7f7;
